# NURU-Personal-AI

./: LICENSE  NURU.md  NURU_V2_Architecture.md  README.md  Roadmap_NURU_V2.md  calibration_notes.md  deploy_nuru.command  install_nuru.sh  pyproject.toml  requirements.txt
NURU.app/Contents/: Info.plist
NURU.app/Contents/MacOS/: NURU
NURU.app/Contents/Resources/: nuru_icon.icns
config/: com.nuru.daemon.plist  config.yaml  nuru_hammerspoon.lua
data/: cache.json  indexed_hashes.json  structured_memory.json  transparency_log.json
data/chroma_db/0a1861d6-9372-486d-a3da-d238da3b8086/: index_metadata.pickle
docs/: V2_ROADMAP.md
scratch/: dump_chroma.py
src/: __init__.py  action_engine.py  audio_stt.py  audio_stt_v2.py  audio_tts.py  brave_search.py  chunker_v2.py  complexity_classifier.py  context_compressor.py  dataset_collector.py  diag_rag.py  feedback.py  fine_tune.py  indexer_daemon.py  ingestion.py  keychain_utils.py  memory.py  memory_v2.py  model_pool_v2.py  monitor.py  nuru_daemon.py  nuru_overlay.py  pipeline_v2.py  prompts_v2.py  rag.py  rag_v2.py  reranker_v2.py  resource_manager_v2.py  router.py  semantic_cache.py  structured_memory.py  structured_memory_v2.py  transparency.py  webui.py  webui_dashboard.html
