[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "nuru"
version = "0.1.0"
description = "Assistant IA personnel hybride (local + cloud) pour Apple Silicon"
readme = "README.md"
license = {text = "MIT"}
keywords = ["assistant", "AI", "MLX", "Apple Silicon", "RAG"]

authors = [
    {name = "Leblanc Bahiga"}
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS :: MacOS X",
    "Environment :: Console",
    "Natural Language :: French",
]

requires-python = ">=3.10"

dependencies = [
    # Cœur LLM local
    "mlx>=0.20.0",
    "mlx-lm>=0.20.0",

    # RAG & Vectorisation
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",

    # Parsing documents
    "PyMuPDF>=1.24.0",
    "python-docx>=1.1.0",

    # Surveillance fichiers
    "watchdog>=4.0.0",

    # Audio
    "faster-whisper>=1.0.0",

    # Sécurité (Keychain macOS)
    "keyring>=25.0.0",

    # API Cloud
    "google-genai>=1.0.0",
    "openai>=1.0.0",

    # Interface Web & UI
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pyyaml>=6.0",
    "PySide6>=6.0.0",

    # Menu Bar macOS
    "rumps>=0.4.0",

    # Utilitaires
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/leblancbahiga/nuru"
Source = "https://github.com/leblancbahiga/nuru"

[project.scripts]
nuru = "src.chat:main"
nuru-daemon = "src.nuru_daemon:main"
nuru-webui = "src.webui:main"
nuru-validate = "src.validate_env:main"
nuru-index = "src.indexer:main"
nuru-keychain = "src.keychain_utils:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools.package-data]
src = ["*.html"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]
